# RAG-Evaluation

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
notebooks/: .gitignore  00_setup.ipynb  01_chunking_and_retrieval.ipynb  02_embedding_models.ipynb  03_real_world_datentypen.ipynb  README.md  config.py  pyproject.toml  w2_04_ocr_docling_vlm_comparison.ipynb  w3_01_intro_end_to_end.ipynb  w3_02_ingestion.ipynb  w3_03_retrieval_evaluation.ipynb  w3_04_generation_evaluation.ipynb
notebooks/data/: GSKI_Fragen-Antworten-Fundstellen_123_Einfach.csv  GSKI_Fragen-Antworten-Fundstellen_40_Einfach.csv  GSKI_Fragen-Antworten-Fundstellen_43_Komplex.csv  IT_Grundschutz_Kompendium_Edition2023.md  synthetic_testset_intro.csv
notebooks/data/cache/40_einfach__json_structured_sections__octen-embedding-8b__gpt-oss-120b/: answer_correctness_top5.json  faithfulness_top5.json  generation_responses_top5.json  retrieval_eval_top5.json  retrieval_experiment_topk.json
notebooks/data/cache/43_komplex__json_structured_sections__minilm-embedding__gpt-oss-120b/: retrieval_eval_top5.json  retrieval_experiment_topk.json
notebooks/data/cache/43_komplex__json_structured_sections__octen-embedding-8b__gpt-oss-120b/: answer_correctness_top5.json  faithfulness_top5.json  generation_responses_top5.json  (+2 more)
notebooks/data_crawled/: agb.md  barrierefreiheit.md  datenschutz.md  forschung.md  hausordnung.md  homepage.md  impact.md  impressum.md  institut.md  ki-servicezentrum.md  kontakt.md  news-events.md  studium.md  suche.md  widerruf.md
notebooks/raw_data/data_crawled/: agb.md  barrierefreiheit.md  datenschutz.md  forschung.md  hausordnung.md  homepage.md  impact.md  impressum.md  institut.md  ki-servicezentrum.md  kontakt.md  news-events.md  widerruf.md
(+8 files in other folders)
