[project]
name = "rag-notebooks"
version = "0.1.0"
description = "Jupyter notebooks for the RAG workshop — data ingestion, chunking, retrieval, and embedding experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "docling>=2.74.0",
    "litellm>=1.0.0",
    "easyocr>=1.7.2",
    "pdf2image>=1.17.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",
    "openai>=2.21.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "onnxruntime>=1.24.1",
    "rapidocr>=3.6.0",
    "ragas>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain>=0.3.0",
    "pandas>=2.0.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
vlm = [
    "docling[vlm]>=2.74.0",
]
mac_vlm = [
    "docling[ocrmac,vlm]>=2.74.0",
]
